--- a/package.json
+++ b/package.json
@@ -19,17 +19,22 @@
     "react-datepicker": "^9.0.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.1",
+    "regenerator-runtime": "^0.14.1",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-legacy": "^7.2.1",
     "@vitejs/plugin-react": "^5.1.1",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "postcss": "^8.5.6",
+    "postcss-preset-env": "^10.5.0",
     "vite": "^7.2.4"
   }
 }
