--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-tailwind/react": "^2.1.10",
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
+    "browser-image-compression": "^2.0.2",
     "jwt-decode": "^4.0.0",
     "react": "^19.2.0",
     "react-datepicker": "^9.0.0",
