--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
     "browser-image-compression": "^2.0.2",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "react": "^19.2.0",
     "react-datepicker": "^9.0.0",
